feat: complete system design

--- a/src/app/school-classes/classes-add/classes-add.component.html
+++ b/src/app/school-classes/classes-add/classes-add.component.html
@@ -22,10 +22,8 @@
         />
       </div>
       <div class="flex flex-col w-1/2">
-        <label class="text-inputTitle mb-2 text-sm md:text-base"
-          >Students:</label
-        >
         <sman-multiselector
+          label="Students:"
           [items]="studentList"
           placeholder="Select students to enroll."
           [lookUp]="true"
