--- a/src/app/shared/components/multiselector/multiselector.component.html
+++ b/src/app/shared/components/multiselector/multiselector.component.html
@@ -1,3 +1,8 @@
+@if(label != "" ) {
+<label class="text-inputTitle inline-block mb-2 text-sm md:text-base">{{
+  label
+}}</label>
+}
 <div class="relative z-10 mt-[2px]" (click)="showItem()">
   <div
     class="w-full bg-white flex items-center justify-center text-sm/6 border px-3 py-3 rounded-xl"
