--- a/src/app/parents/parent-edit/enrollment-info/parent-enrollment-info.component.html
+++ b/src/app/parents/parent-edit/enrollment-info/parent-enrollment-info.component.html
@@ -11,10 +11,8 @@
     <form>
       <div class="md:flex md:gap-4 mb-5">
         <div class="flex flex-col w-full">
-          <label class="text-inputTitle mb-2 text-sm md:text-base" for=""
-            >Students:</label
-          >
           <sman-multiselector
+            label="Students:"
             [items]="studentsList"
             placeholder="Students of this parent."
             [lookUp]="true"
