--- a/src/app/school-classes/class-edit/class-edit.component.html
+++ b/src/app/school-classes/class-edit/class-edit.component.html
@@ -11,10 +11,8 @@
     <form>
       <div class="mb-5">
         <div class="flex flex-col relative z-50 mb-4">
-          <label class="text-inputTitle mb-2 text-sm md:text-base" for=""
-            >Students:</label
-          >
           <sman-multiselector
+            label="Students"
             [items]="studentList"
             placeholder="Select student to enroll."
             [lookUp]="true"
