--- a/src/app/students/student-edit/enrollment-info/student-enrollment-info.component.html
+++ b/src/app/students/student-edit/enrollment-info/student-enrollment-info.component.html
@@ -20,10 +20,8 @@
     <form>
       <div class="md:flex md:gap-4 mb-5">
         <div class="flex flex-col md:w-1/2 relative z-50">
-          <label class="text-inputTitle mb-2 text-sm md:text-base" for=""
-            >Classes:</label
-          >
           <sman-multiselector
+            label="Classes:"
             [items]="classesList"
             placeholder="Select class to enroll."
             [lookUp]="true"
@@ -38,10 +36,8 @@
           ></sman-multiselector>
         </div>
         <div class="flex flex-col md:w-1/2">
-          <label class="text-inputTitle mb-2 text-sm md:text-base" for=""
-            >Parents:</label
-          >
           <sman-multiselector
+            label="Parents:"
             [items]="parentsList"
             placeholder="Parents of this student."
             [lookUp]="true"
