--- a/src/app/subjects/subject-edit/subject-edit.component.html
+++ b/src/app/subjects/subject-edit/subject-edit.component.html
@@ -9,12 +9,10 @@
 >
   <ng-container formInputs>
     <form>
-      <div class=" mb-5">
+      <div class="mb-5">
         <div class="flex flex-col relative z-50 mb-4">
-          <label class="text-inputTitle mb-2 text-sm md:text-base" for=""
-            >Classes:</label
-          >
           <sman-multiselector
+            label="Classes:"
             [items]="classesList"
             placeholder="Select class to enroll."
             [lookUp]="true"
@@ -28,10 +26,8 @@
           ></sman-multiselector>
         </div>
         <div class="flex flex-col relative z-40 mb-4">
-          <label class="text-inputTitle mb-2 text-sm md:text-base" for=""
-            >Schedule:</label
-          >
           <sman-multiselector
+            label="Schedule:"
             [items]="weekDays"
             placeholder="Subject schedule."
             [supportMulti]="true"
@@ -44,10 +40,8 @@
           ></sman-multiselector>
         </div>
         <div class="flex flex-col mb-4">
-          <label class="text-inputTitle mb-2 text-sm md:text-base" for=""
-            >Teacher:</label
-          >
           <sman-multiselector
+            label="Teacher:"
             [items]="teacherList"
             placeholder="Teacher of this subject."
             [lookUp]="true"
