fix: small fixes

--- a/src/app/shared/components-showcase/components-showcase.component.html
+++ b/src/app/shared/components-showcase/components-showcase.component.html
@@ -267,7 +267,7 @@
                     >
                     </sman-multiselector>
                   </div>
-                  <div class="demo-group">
+                  <div class="demo-group max-w-96">
                     <h4>Pre-selected Values</h4>
                     <sman-multiselector
                       label="Pre-selected Subjects"
@@ -289,7 +289,7 @@
                 </div>
                 } @case ('Address Input') {
                 <div class="demo-variants">
-                  <div class="demo-group">
+                  <div class="demo-group max-w-xl">
                     <form [formGroup]="form">
                       <sman-address-autocomplete
                         label="Address Autocomplete"
