--- a/src/app/parents/parent-edit/personal-info/parent-personal-info.component.html
+++ b/src/app/parents/parent-edit/personal-info/parent-personal-info.component.html
@@ -10,12 +10,11 @@
   <ng-container formInputs>
     <div class="flex gap-4">
       <!-- Address -->
-      <sman-input
+      <sman-address-autocomplete
         formControlName="address"
         class="w-full"
         label="Address:"
         name="address"
-        type="text"
         placeholder="Address"
         [hasError]="formService.getCombinedErrors(address)"
         [errMsgs]="{
