fix: added mock credential

--- a/src/app/auth/login-page.component.html
+++ b/src/app/auth/login-page.component.html
@@ -15,7 +15,7 @@
         <div class="">
           <sman-input
             formControlName="username"
-            label="Username:"
+            label="Username: u1@example.com"
             name="username"
             type="text"
             placeholder="Enter your username"
@@ -28,7 +28,7 @@
         <div class="">
           <sman-input
             formControlName="password"
-            label="Password:"
+            label="Password: password01"
             name="password"
             type="password"
             placeholder="Enter your password"
