--- a/src/app/auth/login-page.component.html
+++ b/src/app/auth/login-page.component.html
@@ -10,7 +10,7 @@
     <h1 class="text-3xl mb-14 w-96 text-center mx-auto">
       Welcome, please login to your account
     </h1>
-    <p class="relative bottom-5 italic text-sm text-gray-700 text-center">The server may take 50 seconds to be up.</p>
+    <p class="relative bottom-5 italic text-sm text-gray-700 text-center">A fully custom built project with over 30 components for demonstrating purpose</p>
     <div class="flex items-center flex-col">
       <div class="flex flex-col w-80 gap-4 relative">
         <div class="">
